force-app/main/default/objects/XactlyExpress__XCProfile__c/fields/XactlyExpress__Active__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>