force-app/main/default/objects/XactlyExpress__XCProfile__c/fields/XactlyExpress__DeleteHolds__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DeleteHolds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Delete the holds if the user is deactivated.</description>
    <label>DeleteHolds</label>
    <type>Checkbox</type>
</CustomField>