force-app/main/default/objects/XactlyExpress__XCProfile__c/fields/XactlyExpress__newFeaturesNotification__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__newFeaturesNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is create to allow admins to be notified when express have new features</description>
    <label>newFeaturesNotification</label>
    <type>Checkbox</type>
</CustomField>