force-app/main/default/objects/XactlyExpress__XCProfile__c/fields/XactlyExpress__SalesID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__SalesID__c</fullName>
    <label>Sales ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>