force-app/main/default/objects/XactlyExpress__XCProfile__c/fields/XactlyExpress__UserID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__UserID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>XCProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>