force-app/main/default/objects/XactlyExpress__XCProfile__c/validationRules/XactlyExpress__User_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>XactlyExpress__User_Not_Null</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(XactlyExpress__UserID__c)</errorConditionFormula>
    <errorMessage>Specified a user</errorMessage>
</ValidationRule>